--- a/frontend/src/app/shared/component/charts/chart.component.html
+++ b/frontend/src/app/shared/component/charts/chart.component.html
@@ -11,5 +11,7 @@
       [fill]="chartOptions.fill!"
       [tooltip]="chartOptions.tooltip!"
       [autoUpdateSeries]="true"
+      [plotOptions]="chartOptions.plotOptions!"
+      [legend]="chartOptions.legend!"
     ></apx-chart>
 </div>
