--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -6,10 +6,11 @@ mat-toolbar, mat-sidenav{
 mat-sidenav {
   margin: 16px;
   width: auto;
+  height:fit-content;
   overflow-x: hidden;
   border-right: none;
   border-radius: 10px;
-  padding: 16px;
+  padding: 20px;
   text-align: center;
 }
 
