--- a/frontend/src/app/news/news.component.scss
+++ b/frontend/src/app/news/news.component.scss
@@ -1,5 +1,19 @@
 @use '@angular/material' as mat;
 
+.info {
+    font-size:18px !important;
+    display:inline-grid;
+}
+
+::ng-deep .mat-tooltip {
+    font-size: 15px;
+    white-space: pre-wrap;
+    color: black !important;
+    background-color: rgba(255, 255, 255, .9);
+    border:1px solid gray;
+    max-width: unset !important;
+}
+
 a:link, a:hover, a:active, a:visited { 
     text-decoration: none; 
     color:black;
