--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
           {{ dailyMovement.toFixed(2) + "%" }}
         </h2>
       </div>
-      <mat-form-field appearance="fill">
+      <mat-form-field class="ChartSelector" appearance="fill">
         <mat-label>Change chart</mat-label>
         <mat-select [(value)]="selectedChart">
           <mat-option value="area">Area</mat-option>
@@ -37,16 +37,18 @@
       *ngIf="!isLoading"
     ></stockChart>
 
+    <mat-divider></mat-divider>
+
     <div class="spinbox" *ngIf="isLoading == true">
       <mat-progress-spinner color="primary" mode="indeterminate">
       </mat-progress-spinner>
     </div>
 
-    <div class="center" *ngIf="loadingError == false && isLoading == false">
+    <div class="center" *ngIf="loadingError == false && isLoading == false && stocks.length > 0">
       <div class="fundTitle">
         <h1>
           <strong>
-            {{ watchlistTitle }}
+          {{ watchlistTitle }}
           </strong>
         </h1>
         <button
@@ -123,8 +125,12 @@
         ></stockChart> -->
       </div>
     </div>
-    <div class="center" *ngIf="loadingError == true">
-      <h1>To create a portfolio, add a stock to your watchlist!</h1>
+    <div class="center" *ngIf="loadingError == true || stocks.length == 0">
+      <br>
+      <h2> Welcome {{username | titlecase }}!</h2>
+      <p>To create a watchlist, add a stock to your watchlist.</p>
+      <br>
+      <button mat-button class="inlineLink" routerLink="/stocks">You can browse stocks here</button>
     </div>
   </div>
 </div>
