--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -1,16 +1,22 @@
 <div class="content">
   <div class="dashboard">
-    <h1>{{username | titlecase}}'s administration panel</h1>
+    <h1>{{ username | titlecase }}'s administration panel</h1>
 
-    <table *ngIf="!isLoading" mat-table [dataSource]="dataSource" matSort matSortActive="Time" matSortDirection="desc" matSortDisableClear>
+    <table
+      *ngIf="!isLoading"
+      mat-table
+      [dataSource]="dataSource"
+      matSort 
+      (matSortChange)="announceSortChange($event)"
+    >
       <!-- Time Column -->
       <ng-container matColumnDef="Time">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Time</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.T | date:'medium' }}
+          {{ element.T | date : "medium" }}
         </td>
       </ng-container>
-  
+
       <!-- UserID Column -->
       <ng-container matColumnDef="UserID">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>UserID</th>
@@ -18,7 +24,7 @@
           {{ element.UID }}
         </td>
       </ng-container>
-  
+
       <!-- Username Column -->
       <ng-container matColumnDef="User">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
@@ -26,7 +32,7 @@
           {{ element.UN | titlecase }}
         </td>
       </ng-container>
-  
+
       <!-- Action name Column -->
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
@@ -34,7 +40,7 @@
           {{ element.AN }}
         </td>
       </ng-container>
-  
+
       <!-- Account lock Column -->
       <ng-container matColumnDef="Status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
@@ -46,23 +52,16 @@
             locked: element.L == true
           }"
         >
-          <span *ngIf="element.L == false">
-            <button mat-button color="primary" (click)="lock(element.UID)">Lock</button>
-          </span>
-          <span *ngIf="element.L == true">
-            <button mat-button color="primary" (click)="lock(element.UID)">Unlock</button>
-          </span>
+          <button mat-button color="primary" (click)="lock(element)">
+            <span>{{ element.L ? "Unlock" : "Lock" }}</span>
+          </button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr
-        mat-row
-        *matRowDef="let row; columns: displayedColumns"
-      ></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[25]"></mat-paginator>
-    
   </div>
   <!-- Loader -->
   <div class="spinbox" *ngIf="isLoading">
