--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -53,4 +53,18 @@
       </div>  
     </div>
   </mat-expansion-panel>
+
+  <mat-expansion-panel [expanded]="panelOpenState">
+    <mat-expansion-panel-header matRipple>
+      <mat-panel-title> <b>A.I. Assistance</b> </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div *ngIf="detailsLoaded">
+      <div class="flexbox"> 
+        <p>
+          A.I. Assistance has predicted an implied 1 month gain of 7% based on our prediction model. 
+          17/01/2023 +1.3%, 18/01/2023 -2% , 19/01/2023 +3%
+        </p>
+      </div>  
+    </div>
+  </mat-expansion-panel>
 </div>
