--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -54,15 +54,49 @@
     </div>
   </mat-expansion-panel>
 
-  <mat-expansion-panel [expanded]="panelOpenState">
+  <mat-expansion-panel *ngIf="AIassistance" [expanded]="panelOpenState">
     <mat-expansion-panel-header matRipple>
       <mat-panel-title> <b>A.I. Assistance</b> </mat-panel-title>
     </mat-expansion-panel-header>
     <div *ngIf="detailsLoaded">
       <div class="flexbox"> 
         <p>
-          A.I. Assistance has predicted an implied 1 month gain of 7% based on our prediction model. 
-          17/01/2023 +1.3%, 18/01/2023 -2% , 19/01/2023 +3%
+          Based upon our modelling, A.I. Assistance has predicted the following prices.
+          <mat-icon
+          class="info"
+          [matTooltipClass]="{ 'tool-tip': true }"
+          aria-label="Icon that displays a tooltip when focused or hovered over"
+          matTooltip="A.I. assist is in its beta trial and could display incorrect answers. It should not be interpreted as investment advice."
+        >
+          information
+        </mat-icon>
+        </p>
+          <table>
+            <tr>
+              <th>Current</th>
+              <th>1 Day</th>
+              <th>1 Week</th>
+              <th>1 Month</th>
+              <th>From now</th>
+            </tr>
+            <tr>
+              <td>${{lastPrice | number : '1.2-2'}}</td>
+              <td>${{prediction[0] | number : '1.2-2'}}</td>
+              <td>${{prediction[6] | number : '1.2-2'}}</td>
+              <td>${{prediction[29] | number : '1.2-2'}}</td>
+              <td>
+                <ng-template *ngIf="prediction[29] >= lastPrice!"><mat-icon class="positive">trending_up</mat-icon></ng-template>
+                <ng-template *ngIf="prediction[29] <= lastPrice!"><mat-icon class="negative">trending_down</mat-icon></ng-template>
+              </td>
+            </tr>
+          </table>
+        <p>
+          Based upon current prices, this would be a short term (1 month)
+          <ng-template *ngIf="prediction[29] > lastPrice!; else lessTxt">gain.</ng-template>
+          <ng-template #lessTxt>loss.</ng-template>
+       
+           It is important to note, 
+          stocks are volitile and the safest way to particpate is to average money consistently into the stocks you choose instead of trying to time the markets.
         </p>
       </div>  
     </div>
