--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -6,12 +6,10 @@
       *ngIf="!isLoading"
       mat-table
       [dataSource]="dataSource"
-      matSort 
-      (matSortChange)="announceSortChange($event)"
     >
       <!-- Time Column -->
       <ng-container matColumnDef="Time">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Time</th>
+        <th mat-header-cell *matHeaderCellDef>Time</th>
         <td mat-cell *matCellDef="let element">
           {{ element.T | date : "medium" }}
         </td>
@@ -19,7 +17,7 @@
 
       <!-- UserID Column -->
       <ng-container matColumnDef="UserID">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>UserID</th>
+        <th mat-header-cell *matHeaderCellDef>UserID</th>
         <td mat-cell *matCellDef="let element">
           {{ element.UID }}
         </td>
@@ -27,7 +25,7 @@
 
       <!-- Username Column -->
       <ng-container matColumnDef="User">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
+        <th mat-header-cell *matHeaderCellDef>User</th>
         <td mat-cell *matCellDef="let element">
           {{ element.UN | titlecase }}
         </td>
@@ -35,7 +33,7 @@
 
       <!-- Action name Column -->
       <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+        <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
           {{ element.AN }}
         </td>
@@ -43,7 +41,7 @@
 
       <!-- Account lock Column -->
       <ng-container matColumnDef="Status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+        <th mat-header-cell *matHeaderCellDef>Status</th>
         <td
           mat-cell
           *matCellDef="let element"
