--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -30,6 +30,7 @@
     [chartType]="selectedChart"
   ></stockChart>
 
+  <!-- Stock information -->
   <mat-expansion-panel [expanded]="panelOpenState">
     <mat-expansion-panel-header matRipple>
       <mat-panel-title> <b>Stock Information</b> </mat-panel-title>
@@ -53,6 +54,7 @@
     </div>
   </mat-expansion-panel>
 
+  <!-- A.I assistance -->
   <mat-expansion-panel *ngIf="AIassistance" [expanded]="panelOpenState">
     <mat-expansion-panel-header matRipple>
       <mat-panel-title> <b>A.I. Assistance</b> </mat-panel-title>
@@ -98,6 +100,36 @@
        
            It is important to note, 
           stocks are volitile and the safest way to particpate is to average money consistently into the stocks you choose instead of trying to time the markets.
+        </p>
+      </div>  
+    </div>
+  </mat-expansion-panel>
+
+  <!-- Company metrics -->
+  <mat-expansion-panel [expanded]="panelOpenState">
+    <mat-expansion-panel-header matRipple>
+      <mat-panel-title> <b>Stock financial metrics</b> </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div *ngIf="detailsLoaded">
+      <h3>
+        <span *ngIf="metrics.marketCap == null"> There is no information on this security</span>
+      </h3>
+      <div class="flexbox" *ngIf="metrics.marketCap != null"> 
+        <p>
+          <b>Valuation</b>
+          <span *ngIf="metrics.marketCap"> Market capitalization - ${{metrics.marketCap}} ({{metrics.marketCapCompressed}}) </span>
+          <span *ngIf="metrics.forwardPE"> Forward price/equity (PE) ratio - {{metrics.forwardPE}} </span>
+          <span *ngIf="metrics.profitMargins">  Profit margin - {{metrics.profitMargins}} </span>
+
+          <b>Who has what slice of the pie?</b>
+          <span *ngIf="metrics.sharesOutstanding"> Shares outstanding - {{metrics.sharesOutstanding}}</span>
+          <span *ngIf="metrics.sharesHeldByInsider"> Shares held by insiders - {{metrics.sharesHeldByInsider}}</span>
+          <span *ngIf="metrics.sharesHeldByInstituions"> Shares held by insitutional investors - {{metrics.sharesHeldByInstituions}}</span>
+        
+          <b>Dividend information</b>
+          <span *ngIf="metrics.yield"> Yield percentage - {{metrics.yield}}</span>
+          <span *ngIf="metrics.LastDividEnd"> Last dividend date - {{metrics.LastDividEnd}}</span>
+          <span *ngIf="metrics.lastDividendValue"> Last dividend value - {{metrics.lastDividendValue}}</span>
         </p>
       </div>  
     </div>
