Improved load speed and also returns more details.

--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -21,7 +21,7 @@
           <mat-option
             *ngFor="let stock of stockList"
             [value]="stock"
-            [routerLink]="['/stocks', stock]"
+            [routerLink]="['/stocks', stock.substring(0, stock.indexOf(' '))]"
           >
             {{ stock }}
           </mat-option>
