--- a/frontend/src/app/stocks/stocks.component.scss
+++ b/frontend/src/app/stocks/stocks.component.scss
@@ -59,3 +59,7 @@ td.mat-cell {
   font-size:auto;
   padding:0.5em;
 }
+
+.cdk-global-overlay-wrapper, .cdk-overlay-container {
+  z-index: 99999 !important;
+}
