--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -34,6 +34,16 @@ mat-sidenav-content {
   color: lightgrey;
 }
 
+.hoverTopRight {
+  position:absolute;
+  right: 2%;
+  .mat-icon {
+    display: inline-flex;
+    vertical-align: middle;
+    padding-left:5px
+  }
+}
+
 mat-divider {
   margin-top: 16px;
   margin-bottom: 16px;
