--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -33,7 +33,7 @@
   <!-- Stock information -->
   <mat-expansion-panel [expanded]="panelOpenState">
     <mat-expansion-panel-header matRipple>
-      <mat-panel-title> <b>Stock Information</b> </mat-panel-title>
+      <mat-panel-title> <b>Company information</b> </mat-panel-title>
     </mat-expansion-panel-header>
     <div *ngIf="detailsLoaded">
       <h3>
@@ -57,7 +57,7 @@
   <!-- A.I assistance -->
   <mat-expansion-panel *ngIf="AIassistance" [expanded]="panelOpenState">
     <mat-expansion-panel-header matRipple>
-      <mat-panel-title> <b>A.I. Assistance</b> </mat-panel-title>
+      <mat-panel-title> <b>A.I. Assistance: trend forecast</b> </mat-panel-title>
     </mat-expansion-panel-header>
     <div *ngIf="detailsLoaded">
       <div class="flexbox"> 
@@ -105,21 +105,21 @@
     </div>
   </mat-expansion-panel>
 
-  <!-- Company metrics -->
+  <!-- Company metrics
   <mat-expansion-panel [expanded]="panelOpenState">
     <mat-expansion-panel-header matRipple>
-      <mat-panel-title> <b>Stock financial metrics</b> </mat-panel-title>
+      <mat-panel-title> <b>Stock's valuation and other metrics</b> </mat-panel-title>
     </mat-expansion-panel-header>
     <div *ngIf="detailsLoaded">
       <h3>
         <span *ngIf="metrics.marketCap == null"> There is no information on this security</span>
       </h3>
-      <div class="flexbox" *ngIf="metrics.marketCap != null"> 
+      <div class="flexbox"> 
         <p>
           <b>Valuation</b>
-          <span *ngIf="metrics.marketCap"> Market capitalization - ${{metrics.marketCap}} ({{metrics.marketCapCompressed}}) </span>
-          <span *ngIf="metrics.forwardPE"> Forward price/equity (PE) ratio - {{metrics.forwardPE}} </span>
-          <span *ngIf="metrics.profitMargins">  Profit margin - {{metrics.profitMargins}} </span>
+          <span *ngIf="metrics.marketCap"> Market capitalization - ${{metrics.marketCap}} ({{metrics.marketCapCompressed}}) </span> 
+          <span *ngIf="metrics['forwardPE']['fmt']"> Forward price/equity (PE) ratio - {{metrics['forwardPE']['fmt']}} </span>
+           <span *ngIf="metrics.profitMargins">  Profit margin - {{metrics.profitMargins}} </span>
 
           <b>Who has what slice of the pie?</b>
           <span *ngIf="metrics.sharesOutstanding"> Shares outstanding - {{metrics.sharesOutstanding}}</span>
@@ -133,5 +133,5 @@
         </p>
       </div>  
     </div>
-  </mat-expansion-panel>
+  </mat-expansion-panel> -->
 </div>
