Addition of reading list to home page, requires being linked up

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,8 +6,7 @@
   </button>
   CM Investment Analytics
   <div class="hoverTopRight">
-    <mat-slide-toggle>
-    </mat-slide-toggle>
+    <mat-slide-toggle></mat-slide-toggle>
     <mat-icon>bedtime</mat-icon>
   </div>
 </mat-toolbar>
@@ -59,7 +58,7 @@
   </mat-sidenav>
 
   <!-- Main page content -->
-  <mat-sidenav-content>
+  <mat-sidenav-content class="mat-app-background">
     <div class="flexbox horizontalNav">
       <div *ngFor="let data of navData">
         <button
