--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,6 +2,13 @@ html, body {
   height: 100%; 
 }
 
+body.dark-theme {
+  --text-color: #eee;
+  --bkg-color: #252222;
+  --btn-txt-color: rgb(46, 43, 43);
+  --btn-bg-color: rgb(20, 211, 195);
+}
+
 @media screen and (max-width: 768px){
   ::-webkit-scrollbar {
     width: 0px;
