--- a/frontend/src/app/user/preferences-page/preferences-page.component.html
+++ b/frontend/src/app/user/preferences-page/preferences-page.component.html
@@ -30,7 +30,7 @@
     <h2>Change preference</h2>
     <p>
       If you find these features misleading you can turn them off here and you
-      will not come across them until turned back on.
+      will not come across them until turned back on. Turning this feature off can substantially improve loading speeds.
     </p>
     <b>
       A.I. Assistance settings off
