Improvements to stock detail page

--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.css
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.css
@@ -48,3 +48,23 @@ td {
   display: flex;
   justify-content: center;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+  padding:1em;
+  white-space:nowrap;
+}
+
+b {
+  padding-bottom:0.2em;
+}
