--- a/frontend/src/app/stocks/stock-detail/stock-detail.component.html
+++ b/frontend/src/app/stocks/stock-detail/stock-detail.component.html
@@ -94,12 +94,7 @@
           </table>
         </div>
         <p>
-          Based upon current prices, this would be a short term (1 month)
-          <ng-template *ngIf="prediction[29] > lastPrice!; else lessTxt">gain.</ng-template>
-          <ng-template #lessTxt>loss.</ng-template>
-       
-           It is important to note, 
-          stocks are volitile and the safest way to particpate is to average money consistently into the stocks you choose instead of trying to time the markets.
+        It is important to note, stocks are volitile and the safest way to particpate is to average money consistently into the stocks you research instead of trying to time the markets.
         </p>
       </div>  
     </div>
