--- a/frontend/src/app/stocks/stocks.component.html
+++ b/frontend/src/app/stocks/stocks.component.html
@@ -33,25 +33,11 @@
     </mat-form-field>
   </div>
 
-  <!-- Search results -->
-  <!-- <div class="searchResults mat-elevation-z5">
-    <ng-container *ngIf="stockList.length; else notFound">
-      <div *ngFor="let stock of stockList">
-        <h1>{{ stock }}</h1>
-      </div>
-    </ng-container>
-    <ng-template #notFound>
-      <div>
-        <h1>Not found</h1>
-      </div>
-    </ng-template>
-  </div> -->
-
   <table mat-table [dataSource]="dataSource">
-    <!-- Ticker Column -->
+    <!-- Company Column -->
     <ng-container matColumnDef="Ticker">
-      <th mat-header-cell *matHeaderCellDef>Top winner</th>
-      <td mat-cell *matCellDef="let element">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center">Top winner</th>
+      <td mat-cell *matCellDef="let element" style="text-align:center">
         {{ element.T }}
       </td>
     </ng-container>
